kubernetes-adv-deployments/part-11-ingress-aws/v2-my-eks-cluster-ingress/ingress-paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  labels:
    name: ingress-hosts
spec:
  rules:
    - host: www.notjustdevops.com
      http:
        paths:
          - path: /page1
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 27017
